--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "168dev-react-paginate",
-  "version": "8.2.0",
-  "description": "A ReactJS component that creates a pagination.",
+  "version": "8.2.1",
+  "description": "A ReactJS component that creates a pagination work with react 19.",
   "main": "./dist/react-paginate.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AdeleD/react-paginate"
+    "url": "https://github.com/timomedia/168dev-react-paginate"
   },
   "keywords": [
     "react-component",
@@ -18,7 +18,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AdeleD/react-paginate/issues"
+    "url": "https://github.com/timomedia/168dev-react-paginate/issues"
   },
   "dependencies": {
     "prop-types": "^15"
